--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+egui-macroquad = "0.15.0"
 paste = "1.0.15"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
