--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-egui-macroquad = "0.15.0"
+bevy = { version = "0.15.0", default-features = false, features = [
+    "bevy_asset",
+    "bevy_render",
+    "bevy_sprite",
+    "bevy_window",
+    "bevy_winit",
+    "wayland",
+    "x11",
+] }
+bevy_egui = "0.32.0"
+image = { version = "0.25.5", default-features = false }
 paste = "1.0.15"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
