--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-fs = "2.1.2"
 bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_asset",
     "bevy_render",
@@ -18,6 +19,7 @@ image = { version = "0.25.5", default-features = false }
 paste = "1.0.15"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
+rfd = "0.15.2"
 thiserror = "2.0.11"
 typenum = { version = "1.17.0", features = ["const-generics"] }
 ux = "0.1.6"
