--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-fs = "2.1.2"
 bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_asset",
+    "bevy_audio",
     "bevy_render",
     "bevy_sprite",
     "bevy_window",
