--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ bevy = { version = "0.15.0", default-features = false, features = [
 ] }
 bevy_egui = "0.32.0"
 image = { version = "0.25.5", default-features = false }
+num-traits = "0.2.19"
 paste = "1.0.15"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
 thiserror = "2.0.11"
-typenum = { version = "1.17.0", features = ["const-generics"] }
 ux = "0.1.6"
