--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bevy = { version = "0.15.0", default-features = false, features = [
     "x11",
 ] }
 bevy_egui = "0.32.0"
+bytemuck = { version = "1.21.0", features = ["must_cast"] }
 image = { version = "0.25.5", default-features = false }
 num-traits = "0.2.19"
 paste = "1.0.15"
