--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ paste = "1.0.15"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
+rodio = { version = "0.19.0", default-features = false }
 thiserror = "2.0.11"
 ux = "0.1.6"
