--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+arbitrary-int = "1.3.0"
 async-fs = "2.1.2"
 bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_asset",
@@ -16,6 +17,7 @@ bevy = { version = "0.15.0", default-features = false, features = [
     "x11",
 ] }
 bevy_egui = "0.32.0"
+bitbybit = "1.3.3"
 bytemuck = { version = "1.21.0", features = ["must_cast"] }
 image = { version = "0.25.5", default-features = false }
 num-traits = "0.2.19"
@@ -25,4 +27,3 @@ rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
 rodio = { version = "0.19.0", default-features = false }
 thiserror = "2.0.11"
-ux = "0.1.6"
