--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-arbitrary-int = "1.3.0"
+arbitrary-int = { version = "1.3.0", default-features = false }
 async-fs = "2.1.2"
 bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_asset",
     "bevy_audio",
+    "bevy_gizmos",
     "bevy_render",
     "bevy_sprite",
     "bevy_window",
@@ -16,9 +17,11 @@ bevy = { version = "0.15.0", default-features = false, features = [
     "wayland",
     "x11",
 ] }
+bevy-inspector-egui = "0.29.1"
 bevy_egui = "0.32.0"
 bitbybit = "1.3.3"
 bytemuck = { version = "1.21.0", features = ["must_cast"] }
+egui_tiles = { version = "0.11.0", default-features = false }
 image = { version = "0.25.5", default-features = false }
 num-traits = "0.2.19"
 paste = "1.0.15"
