--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,6 @@ rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
 rodio = { version = "0.19.0", default-features = false }
 thiserror = "2.0.11"
+
+[profile.release]
+debug = true
