--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,27 @@ bevy-inspector-egui = "0.29.1"
 bevy_egui = "0.32.0"
 bitbybit = "1.3.3"
 bytemuck = { version = "1.21.0", features = ["must_cast"] }
+coz = "0.1.3"
 egui_tiles = { version = "0.11.0", default-features = false }
 image = { version = "0.25.5", default-features = false }
 num-traits = "0.2.19"
 paste = "1.0.15"
+puffin = "0.19.1"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
 rodio = { version = "0.19.0", default-features = false }
 thiserror = "2.0.11"
+tracing = "0.1.41"
+tracing-flame = "0.2.0"
+tracing-subscriber = "0.3.19"
 
 [profile.release]
 debug = true
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "benchmark"
+harness = false
