--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 arbitrary-int = { version = "1.3.0", default-features = false }
+async-channel = "2.3.1"
 async-fs = "2.1.2"
 bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_asset",
@@ -14,6 +15,7 @@ bevy = { version = "0.15.0", default-features = false, features = [
     "bevy_sprite",
     "bevy_window",
     "bevy_winit",
+    "multi_threaded",
     "wayland",
     "x11",
 ] }
@@ -31,6 +33,7 @@ rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
 rfd = "0.15.2"
 rodio = { version = "0.19.0", default-features = false }
+spin_sleep = "1.3.0"
 thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-flame = "0.2.0"
