--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bytemuck = { version = "1.21.0", features = ["must_cast"] }
 egui_tiles = { version = "0.11.0", default-features = false }
 image = { version = "0.25.5", default-features = false }
 num-traits = "0.2.19"
+paste = "1.0.15"
 # puffin = "0.19.1"
 rand = { version = "0.9.0", default-features = false, features = ["os_rng"] }
 rand_xoshiro = "0.7.0"
